fix alignment in asset picker

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -29,10 +29,6 @@
     flex-direction: column;
     width: 100%;
 
-    .asset-picker-filter .tooltip {
-        position: relative;
-    }
-
     .trade-panel {
         margin: 0;
         flex-direction: column;
@@ -161,6 +157,10 @@
 
     tbody tr {
         cursor: pointer;
+    }
+
+    .asset-picker-filter [role=tab]:nth-child(7) .tooltip {
+        margin-left: -0.8em;
     }
 }
 
